--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -16,6 +16,7 @@
 
 @headContent = {
 	<script src="@routes.Assets.at("javascripts/jquery-ui-1.8.16.custom.min.js")"></script>
+	<script src="@routes.Assets.at("javascripts/bootstrap-buttons.js")" type="text/javascript"></script>
 	<script src="@routes.Assets.at("javascripts/admin.js")" type="text/javascript"></script>
 	<link rel="stylesheet" href="@routes.Assets.at("stylesheets/themes/cupertino/jquery.ui.all.css")">
 	<script type="text/javascript">
