--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -8,7 +8,7 @@
 		</h1>
 	</div>
 	<div class="row">
-		<div class="span10 offset3">
+		<div class="span8 offset2">
 			Ok, this project is an attempt to create a web application that offers a forecasting system for Euro 2012 football competition.
 			My main motivation is to learn the Scala language and the Play 2.0 framework as well as HTML5 and other 'trendy' libs/frameworks (Bootstrap, LESS, ...)
 			I would be surprised if this app ends up in a production environment for real use, but who knows ...
@@ -21,19 +21,20 @@
 		</h1>
 	</div>
 	<div class="row">
-		<div class="span10 offset3">
+		<div class="span8 offset2">
 			<h4>Points</h4>
-	
-			Each phase contains several matches to forecast. 
-			Each match correctly forecasted yield a number of points. 
-			A forecast is correct if you guess the winning team or a draw. 
-			Bonus points are added if you also guess the exact score of the match. 
-			The number of points and bonus points depend on the phase of the competition as follows:
-		
+			<p>
+				Each phase contains several matches to forecast. 
+				Each match correctly forecasted yield a number of points. 
+				A forecast is correct if you guess the winning team or a draw. 
+				Bonus points are added if you also guess the exact score of the match. 
+				The number of points and bonus points depend on the phase of the competition as follows:
+			</p>
+			
 			<h5>Stage 1 - Group Stage (includes MD1,MD2,MD3 24 matches):</h5>
 			<ul>
-				<li>Correct Result: 1 point</li>
-				<li>Correct Score: +3 points</li>	
+				<li>Correct Result: <span class="label">1 point</span></li>
+				<li>Correct Score: <span class="label label-success">+3 points</span></li>	
 			</ul>
 			
 			@*<!--  
@@ -44,15 +45,15 @@
 
 			<h5>Stage 2 - Quarter-Finals (4 matches):</h5>
 			<ul>
-				<li>Correct Result: 4 points</li>
-				<li>Correct Score: +7 points</li>
+				<li>Correct Result: <span class="label">4 points</span></li>
+				<li>Correct Score: <span class="label label-success">+7 points</span></li>
 			</ul>
 			
 			
 			<h5>Stage 3 - Semi-Finals (2 matches):</h5>
 			<ul>
-				<li>Correct Result: 6 points</li>
-				<li>Correct Score: +10 points</li>
+				<li>Correct Result: <span class="label">6 points</span></li>
+				<li>Correct Score: <span class="label label-success">+10 points</span></li>
 			</ul>
 			
 			@*<!--
@@ -65,26 +66,35 @@
 			
 			<h5>Stage 4 - Final (1st place):</h5>
 			<ul>
-				<li>Correct Result: 15 points</li>
-				<li>Correct Score: +20 points</li>
+				<li>Correct Result: <span class="label">15 points</span></li>
+				<li>Correct Score: <span class="label label-success">+20 points</span></li>
 			</ul>
 
 			<h4>Deadline</h4>
-			A forecast can be entered up until 30 minutes before the start of each match (Central European Time). 
-			Beyond that point, forecasting is locked for that match.
+			<p>
+				A forecast can be entered up until 30 minutes before the start of each match (Central European Time). 
+				Beyond that point, forecasting is locked for that match.
+			</p>
 			 
 			<h4>Score</h4>
-			The final official score after full time, including extra-time if needed, represents the base for calculating points for match results and bonus points for correct score. 
-			Eventual penalty shootouts after extra-time do not count!
+			<p>
+				The final official score after full time, including extra-time if needed, 
+				represents the base for calculating points for match results and bonus points for correct score. 
+				Eventual penalty shootouts after extra-time do not count!
+			<p>
 			 
 			<h4>Award</h4>
-			The winners are the three (3) with the highest number of points after the contest is over. 
-			Winners with equal number of points will be separated on goal-average as follows: each correct score yields +1 point in goal-average. 
-			Winners with equal goal-average will be separated by draw, if possible in their presence.
+			<p>
+				The winners are the three (3) with the highest number of points after the contest is over. 
+				Winners with equal number of points will be separated on goal-average as follows: each correct score yields +1 point in goal-average. 
+				Winners with equal goal-average will be separated by draw, if possible in their presence.
+			</p>
 			 
 			<h4>Prizes</h4>
-			This game is being played for fun !
-			Unless donations are made, expect no special prize except my respect ;-)
+			<p>
+				This game is being played for fun !
+				Unless donations are made, expect no special prize except my respect ;-)
+			</p>
 		
 		</div>
 	</div>
