--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -9,14 +9,14 @@
 			time :
 			<input id="currentTime" type="text" class="span2" value="@currentDateTime.format("HH:mm")" />
 		</div>
-		<input type="button" class="btn small" value="Set" onclick="setCurrentDateTime();" />
+		<input type="button" class="btn btn-small" value="Set" onclick="setCurrentDateTime();" />
 	</div>
 	}
 }
 
 @headContent = {
 	<script src="@routes.Assets.at("javascripts/jquery-ui-1.8.16.custom.min.js")"></script>
-	<script src="@routes.Assets.at("javascripts/bootstrap-buttons.js")" type="text/javascript"></script>
+	<script src="@routes.Assets.at("javascripts/bootstrap-button.js")" type="text/javascript"></script>
 	<script src="@routes.Assets.at("javascripts/admin.js")" type="text/javascript"></script>
 	<link rel="stylesheet" href="@routes.Assets.at("stylesheets/themes/cupertino/jquery.ui.all.css")">
 	<script type="text/javascript">
@@ -33,7 +33,7 @@
     	    </h1>
     	</div>
 	    <div class="row">
-	    	<ul class="tabs">
+	    	<ul class="nav nav-tabs">
 	    		<li class="active"><a href="#about" onclick="showTab(event);">About</a></li>
 	    		<li><a href="#users" onclick="showTab(event, '@routes.Admin.showUsers()');">Users</a></li>
 	    		<li><a href="#matches"  onclick="showTab(event, '@routes.Admin.showMatches()');">Matches</a></li>
