--- a/app/views/adminpages/users.scala.html
+++ b/app/views/adminpages/users.scala.html
@@ -2,7 +2,7 @@
 
 <h3>Users</h3>
 
-<table class="condensed-table zebra-striped">
+<table class="table table-condensed table-striped">
 	<thead>
 		<tr>
 			<th>Name</th>
