--- a/app/views/group.scala.html
+++ b/app/views/group.scala.html
@@ -8,17 +8,17 @@
     	</h1>
     </div>
     
-    <h3 style="text-align: center;">Standings</h3>
+    <h3 style="text-align: center; margin-bottom: 10px;">Standings</h3>
     
-    <div class="row" style="width: 430px; margin-left: auto; margin-right: auto;">
-    	<ul class="media-grid">
-	    	<li>
-	        	<a href="#" class="group">@helper.groupStandings(group, standings)</a>
+    <div class="row" style="width: 380px; margin-left: auto; margin-right: auto;">
+    	<ul class="thumbnails">
+	    	<li class="span5">
+	        	<a href="#" class="thumbnail group">@helper.groupStandings(group, standings)</a>
 	        </li>
     	</ul>
     </div>
     
-    <h3 style="text-align: center;">Matches</h3>
+    <h3 style="text-align: center; margin-bottom: 10px;">Matches</h3>
     
     @helper.matchesTable(matches, showDates = true)
 }
