--- a/app/views/helper/forecastsTable.scala.html
+++ b/app/views/helper/forecastsTable.scala.html
@@ -22,7 +22,7 @@
 	</div>
 }
 
-	<table class="forecast zebra-striped">
+	<table class="forecast match table table-striped">
   	@matches.map { zmatch =>
   		<tr>
   			<!-- <td style="text-align: right; white-space: nowrap;">Sunday, the 17 of June 2012 18:00</td> -->
@@ -41,11 +41,13 @@
 			@if(zmatch.played) {
 				@helper.scoreDiv(zmatch)
 				@forecastsByMatch.get(zmatch.id).map { forecast =>
-					<br>
-					your forecast : @forecast.scoreA - @forecast.scoreB 
+					<div class="forecasted">
+						your forecast : @forecast.scoreA - @forecast.scoreB
+					</div>
 				}.getOrElse {
-					<br>
-					no forecast
+					<div class="forecasted">
+						no forecast
+					</div>
 				}
 			} else {
 				@if(controllers.Application.canForecast(zmatch.kickoff)) {
