--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -1,15 +1,21 @@
 @(title: String, head: Html = Html.empty, activeNav: String = "home")(content: Html)(implicit request: play.api.mvc.RequestHeader)
 
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
     <head>
         <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<meta name="description" content="">
+    	<meta name="author" content="ozeebee">
+    	
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap/responsive.css")">
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/main.css")">
+        
         <!-- <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")"> -->
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")" type="text/javascript"></script>
+		<script src="@routes.Assets.at("javascripts/bootstrap-scrollspy.js")" type="text/javascript"></script>
 		<script src="@routes.Assets.at("javascripts/main.js")" type="text/javascript"></script>
 		<script type="text/javascript">
 			// variable used in external scripts to link assets
@@ -17,9 +23,9 @@
 		</script>
 		@head
     </head>
-    <body>
-    	<header class="topbar" data-dropdown="dropdown">
-    		<div class="fill">
+    <body data-spy="scroll" data-target=".subnav" data-offset="50">
+    	<div class="navbar navbar-fixed-top">
+    		<div class="navbar-inner">
         		<div class="container">
           			<a class="brand" href="#">Eu12</a>
 					
@@ -29,36 +35,32 @@
             			<li><a href="#">Contact</a></li>
           			</ul>
           			
-<!--           			<form action="" class="pull-right">
-            			<input class="input-small" type="text" placeholder="Username">
-            			<input class="input-small" type="password" placeholder="Password">
-            			<button class="btn" type="submit">Sign in</button>
-          			</form>
- -->      				 
- 					<ul class="nav secondary-nav">
+ 					<ul class="nav pull-right">
  					@controllers.Security.username.map { user =>
 						<li class="dropdown">
-	              			<a href="#" class="dropdown-toggle">
-	              				<img height="20" src="http://www.gravatar.com/avatar/@app.utils.MD5.hash(controllers.Security.useremail.get)?s=140&d=mm" style="float:left; margin-right: 3px;" />
-	              				<span style="line-height: 22px;">@user</span>
+	              			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+	              				<img src="http://www.gravatar.com/avatar/@app.utils.MD5.hash(controllers.Security.useremail.get)?s=140&d=mm" style="float:left; margin-right: 3px; max-height: 20px;" />
+	              				<span style="line-height: 22px;">@user </span>
+	              				<b class="caret"></b>
 	              			</a>
 	              			<ul class="dropdown-menu">
 								<li><a href="@routes.Security.logout">Logout</a></li>
 							</ul>
 						</li>
         			}.getOrElse {
-        				<li><a href="@routes.Security.login()">Login</a></li>
+        				<li @if(activeNav=="login"){class="active"}><a href="@routes.Security.login()">Login</a></li>
         			}
         			</ul>
  				</div>
-      		</div>
-    	</header>
-
+    		</div>
+    	</div>
+    
 		<div class="container">
 			<div class="content">
 				@content
 			</div>
 	
+			<hr>
 			<footer>
 				<p>&copy; OzB 2011</p>
 			</footer>
