--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -3,26 +3,25 @@
 @layout.main("Register") {
 	<div class="modal" style="position: relative; top: auto; left: auto; margin: 0pt auto; z-index: 1;">
 		<div class="modal-header">
-			<!-- <a href="#" class="close">x</a> -->
 			<h3>Registration form</h3>
 		</div>
 		
 		<div class="modal-body">
 			@if(registerForm.hasGlobalErrors) {
-				<div class="alert-message error">
+				<div class="alert alert-error">
 					@registerForm.globalError.map { error =>
-		                <p class="error">@error.message</p>
+		                @error.message
 		            }
 				</div>
 			}
 			
-			<form id="registerForm" method="post" action="@routes.Security.registerSubmit()">
+			<form id="registerForm" method="post" action="@routes.Security.registerSubmit()" class="form-horizontal">
 				<fieldset>
 					<legend>Register your user</legend>
 					@registerForm.forField("name") { field =>
-						<div class="clearfix @if(! field.errors.isEmpty) { error }">
-							<label for="name">Username :</label>
-							<div class="input">
+						<div class="control-group @if(! field.errors.isEmpty) { error }">
+							<label class="control-label" for="name">Username :</label>
+							<div class="controls">
 								<input id="name" name="@field.name" type="text" value="@field.value" autofocus />
 								@if(! field.errors.isEmpty) {
 									<span class="help-inline">
@@ -33,9 +32,9 @@
 						</div>
 					}
 					@registerForm.forField("email") { field =>
-						<div class="clearfix @if(! field.errors.isEmpty) { error }">
-							<label for="email">E-mail :</label>
-							<div class="input">
+						<div class="control-group @if(! field.errors.isEmpty) { error }">
+							<label class="control-label" for="email">E-mail :</label>
+							<div class="controls">
 								<input id="email" name="@field.name" type="email" value="@field.value" />
 								@if(! field.errors.isEmpty) {
 									<span class="help-inline">
@@ -46,9 +45,9 @@
 						</div>
 					}
 					@registerForm.forField("password") { field =>
-						<div class="clearfix @if(! field.errors.isEmpty) { error }">
-							<label for="password">Password :</label>
-							<div class="input">
+						<div class="control-group @if(! field.errors.isEmpty) { error }">
+							<label class="control-label" for="password">Password :</label>
+							<div class="controls">
 								<input id="password" name="@field.name" type="password" />
 								@if(! field.errors.isEmpty) {
 									<span class="help-inline">
@@ -66,8 +65,7 @@
 			@if(registerForm.hasErrors) {
 				<span class="error">Please fix the errors before submitting</span>
 			}		
-			<!-- <a href="#" class="btn primary">Login</a> -->
-			<a href="#"	class="btn secondary" onclick="$('#registerForm').submit()">Register</a>
+			<a href="#"	class="btn btn-primary" onclick="$('#registerForm').submit()">Register</a>
 		</div>
 	</div>
 }
