--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -72,7 +72,7 @@
 
 			<h4>Deadline</h4>
 			<p>
-				A forecast can be entered up until 30 minutes before the start of each match (Central European Time). 
+				A forecast can be entered up until <strong>30 minutes</strong> before the start of each match (Central European Time). 
 				Beyond that point, forecasting is locked for that match.
 			</p>
 			 
