--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -25,7 +25,7 @@
     <h3>Game</h3>
     <ul>
         <li><a href="@routes.Application.showForecasts()">forecasts</a></li>
-    	<li><a href="#ranking">ranking</a></li>
+    	<li><a href="@routes.Application.showRanking()">ranking</a></li>
     </ul>	
     
 
