--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -39,7 +39,7 @@
  					@controllers.Security.username.map { user =>
 						<li class="dropdown">
 	              			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-	              				<img src="http://www.gravatar.com/avatar/@app.utils.MD5.hash(controllers.Security.useremail.get)?s=140&d=mm" style="float:left; margin-right: 3px; max-height: 20px;" />
+	              				<img src="@models.User.gravatarUrl(controllers.Security.useremail.get)" style="float:left; margin-right: 3px; max-height: 20px;" />
 	              				<span style="line-height: 22px;">@user </span>
 	              				<b class="caret"></b>
 	              			</a>
