implemented scenarios (admin scripts); refactored forecasts page : replaced table by divs and added forecast results next to each match played

--- a/app/assets/stylesheets/jumbotron.less
+++ b/app/assets/stylesheets/jumbotron.less
@@ -127,7 +127,7 @@
     top: 40px;
     left: 0;
     right: 0;
-    z-index: 1030;
+    z-index: 999; // AJO : decreased z-index from 1030 to 999 so that the top menu dropdowns are drawn on top of subnav
     border-color: #d5d5d5;
     border-width: 0 0 1px; /* drop the border on the fixed edges */
     -webkit-border-radius: 0;
