--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -29,7 +29,7 @@
     <section id="admin">
     	<div class="page-header">
     	    <h1>Admin page
-    	    	<small>tools for managing users, teams, matches and results</small>
+    	    	<small>tools for the power user ! Oh Yeah !</small>
     	    </h1>
     	</div>
 	    <div class="row">
@@ -38,7 +38,7 @@
 	    		<li><a href="#users" onclick="showTab(event, '@routes.Admin.showUsers()');">Users</a></li>
 	    		<li><a href="#matches"  onclick="showTab(event, '@routes.Admin.showMatches()');">Matches</a></li>
 	    		<li><a href="#teams" onclick="showTab(event, '@routes.Admin.showUsers()');">Teams</a></li>
-	    		<li><a href="#other">Other</a></li>
+	    		<li><a href="#scenarios" onclick="showTab(event, '@routes.Admin.showScenarios()');">Scenarios</a></li>
 	    	</ul>
 	    	
 	    	<div class="tab-content">
