--- a/app/views/forecasts.scala.html
+++ b/app/views/forecasts.scala.html
@@ -9,7 +9,7 @@
     <header class="jumbotron subhead">
     	<a name="top"></a>
     	<h1>Forecasts
-    		<small>Enter your forecasts</small>
+    		<small>Think you're a king ? Prove it !</small>
     		
     		<span style="font-size:12px; font-weight:normal; margin-left:30px;">
     			<input type="checkbox" onclick="showModifiableForecasts(event)"> show only modifiable forecast
