--- a/app/views/layout/main.scala.html
+++ b/app/views/layout/main.scala.html
@@ -36,6 +36,11 @@
           			</ul>
           			
  					<ul class="nav pull-right">
+ 						<li>
+ 							<span style="color: #999;">
+ 								Simulate Date : @models.Param.getCurrentDateTime.format("dd/MM HH:mm")
+ 							</span>
+ 						</li>
  					@controllers.Security.username.map { user =>
 						<li class="dropdown">
 	              			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -44,6 +49,8 @@
 	              				<b class="caret"></b>
 	              			</a>
 	              			<ul class="dropdown-menu">
+	              				<li><a href="@routes.Admin.showAdmin()">Admin</a></li>
+	              				<li class="divider"></li>
 								<li><a href="@routes.Security.logout">Logout</a></li>
 							</ul>
 						</li>
